--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/react": "^18.2.79",
     "parcel": "^2.12.0"
   },
   "name": "ra-reactjs-training",
@@ -12,6 +13,7 @@
     "argparse": "^2.0.1",
     "base-x": "^3.0.9",
     "boolbase": "^1.0.0",
+    "bootstrap": "^5.3.3",
     "braces": "^3.0.2",
     "browserslist": "^4.23.0",
     "callsites": "^3.1.0",
@@ -82,6 +84,7 @@
     "posthtml-render": "^3.0.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.9",
     "react-refresh": "^0.9.0",
