--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.9",
     "react-refresh": "^0.9.0",
+    "react-router-dom": "^6.23.0",
     "react-with-important-style": "^0.2.2",
     "regenerator-runtime": "^0.13.11",
     "resolve-from": "^4.0.0",
