Created a Product details Page with dynamic productId and matched css

--- a/package.json
+++ b/package.json
@@ -84,10 +84,13 @@
     "posthtml-render": "^3.0.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-error-overlay": "^6.0.9",
+    "react-material-ui-carousel": "^3.4.2",
     "react-refresh": "^0.9.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
     "react-with-important-style": "^0.2.2",
     "regenerator-runtime": "^0.13.11",
